Sat Oct 12 18:27:59 BST 2019  Lee Noar  <lee.noar@sky.com>

	* Initial revision:
	Module to provide support services to code generated by
	GCC 8 and above. Services provided (via SWI) are:
	Memory allocation via mapped memory pages.
	Stack management.
	Abort handling (used primarily by the stack handler).